css/style.css
@import "compass/css3";
@import url('https://fonts.googleapis.com/css?family=Playfair+Display');

* {
  box-sizing: border-box;
}
.logogrow {
    animation: grow 1.4s !important;
}
  
  @keyframes grow {
    0% {
      transform: scale(0) !important;
    }
    100% {
      transform: scale(1)!important;
    }
}


.logotext{
    font-family: 'Lilita One', sans-serif!important;
    text-align:center!important;
} 
.col.introtext{
  font-family: 'Lilita One', sans-serif!important;
  font-size:6em;
  margin-top:2%;
} 
.col.overview{
  text-align:center;
  color:white;
  font-family:'Oswald', sans-serif !important;
  font-size:1.5em !important;
  padding-top:32px;
  left:50% !important;
}

.col.introright{
  font-family:'Oswald', sans-serif!important;
  font-weight:400;
  font-size:2em;
  padding-top:5%;
}
div.col-6.bodycontent{
  color:white !important;
  font-family:'Oswald', sans-serif !important;
  font-size:1.5em !important;
  left:40% !important;
  padding-top:40px !important;
}

ul.education{
  font-size:1em !important;
  font-family:'Lato', sans-serif !important;
  list-style:none;
  font-weight:600;
}
li.light-text{
  font-weight:400;
}
.container.middle{
  position:relative;
}

.parallax {
  -webkit-perspective: 100px;
          perspective: 100px;
  height: 100vh;
  overflow-x: hidden;
  overflow-y: hidden;
  position: absolute;
  top: 10%;
  left: 50%;
  right: 0;
  bottom: 0;
  margin-left: -1500px;
}

.parallax__layer {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}
.parallax__layer img {
  display: block;
  position: absolute;
  bottom: 0;
}

.parallax__cover {
  background: rgb(45,17,43);
  background: -moz-linear-gradient(top, rgb(0, 0, 0) 0%, rgba(22,5,5,1) 100%);
  background: -webkit-linear-gradient(top, rgb(0, 0, 0) 0%,rgba(22,5,5,1) 100%);
  background: linear-gradient(to bottom, rgb(0, 0, 0) 0%,rgba(22,5,5,1) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2d112b', endColorstr='#160505',GradientType=0 );
  display: block;
  position: absolute;
  top: 100%;
  left: 0;
  right: 0;
  height: 1000px;
  z-index: 2;
}

.parallax__layer__0 {
  -webkit-transform: translateZ(-400px) scale(4);
          transform: translateZ(-400px) scale(4);
}

.parallax__layer__1 {
  -webkit-transform: translateZ(-300px) scale(2.5);
          transform: translateZ(-300px) scale(2.5);
}

.parallax__layer__2 {
  -webkit-transform: translateZ(-200px) scale(3);
          transform: translateZ(-200px) scale(3);
}

.parallax__layer__3 {
  -webkit-transform: translateZ(-150px) scale(2);
          transform: translateZ(-150px) scale(2);
}

.parallax__layer__4 {
  -webkit-transform: translateZ(-100px) scale(2);
          transform: translateZ(-100px) scale(2);
}

.parallax__layer__5 {
  -webkit-transform: translateZ(-50px) scale(1.5);
          transform: translateZ(-50px) scale(1.5);
}

.parallax__layer__6 {
  -webkit-transform: translateZ(0px) scale(1);
          transform: translateZ(0px) scale(1);
}

/* MEDIA QUERIES */
@media screen and (max-width: 700px){
  .col.introtext{
    font-size:5em;    
}
  .col.intro{
    padding-top:5%;
    
  }
  .col.bodycontent{
    display:none;
  }
  .parallax{
    height: 100vh;
  }
  .parallax__cover{
    height:200px;
  }

}
@media screen and (max-width: 1000px){
  .col.introtext{
    font-size:4em;
    padding-top:4%;
    
}
}


.listsubtext{
  font-family:'Oswald', sans-serif !important;
  font-weight:400 !important;
  font-size:.75em !important;
}

